# rust-temperatured

./: Cargo.toml  README.md
src/: main.rs
