[package]
name = "temperatured"
version = "0.1.0"
authors = ["Jesús Marín <contacto@jesusmg.org>", "Elvira Ramirez <elvirarp92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
openssl = { version = "0.10.29", features = ["vendored"] }